integrated sentence generator. refactor